# qt-readable-csv-parser

./: CMakeLists.txt  README.md
include/csv_parser/: csvdocument.h
src/: csvdocument.cpp  csvparser.cpp  csvparser.h
tests/: CMakeLists.txt  test_csv_parser_load_from_string.cpp  test_csv_parser_save_from_string.cpp
